tests/machine/x/scala/right_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/right_join.scala:4: error: value customerId is not a member of scala.collection.immutable.Map[String,Int]
  val result = for { o <- orders; c = customers.find(c => (o.customerId).asInstanceOf[Int] == (c.id).asInstanceOf[Int]) } yield Map("customerName" -> (c("name")), "order" -> (o))
                                                             ^
/workspace/mochi/tests/machine/x/scala/right_join.scala:4: error: value id is not a member of scala.collection.immutable.Map[String,Any]
  val result = for { o <- orders; c = customers.find(c => (o.customerId).asInstanceOf[Int] == (c.id).asInstanceOf[Int]) } yield Map("customerName" -> (c("name")), "order" -> (o))
                                                                                                 ^
/workspace/mochi/tests/machine/x/scala/right_join.scala:4: error: Any does not take parameters
  val result = for { o <- orders; c = customers.find(c => (o.customerId).asInstanceOf[Int] == (c.id).asInstanceOf[Int]) } yield Map("customerName" -> (c("name")), "order" -> (o))
                                                                                                                                                        ^
three errors found
